# geoshaper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  image.rs  image_utils.rs  individual.rs  lib.rs  main.rs  rectangle.rs  shape.rs  simulation.rs  triangle.rs
tests/: integration_test.rs
